--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
   <section class="contact">
     <h2>Contact</h2>
-    <p>Email: tanisha@example.com</p>
+    <p>Email: tanishagarg1208@gmail.com</p>
     <p><a href="https://www.linkedin.com/in/tanisha-garg-a2b32b281/" target="_blank" rel="noopener noreferrer">Connect on LinkedIn</a></p>
   </section>
 
